--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
                 <li class="main-nav__item"><a href="#">Записаться</a></li>
                 <li class="main-nav__item"><a href="#">Контакты</a></li>
                 <li class="main-nav__item"><a href="#">Сайт разработчика</a></li>
-            </ul>
+            </ul> <!-- end .main-nav__items -->
 
             <ul class="main-nav__user-items">
                 <li class="main-nav__user-item"><a href="#" class="main-nav__user-login" title="Войти">Вход</a></li>
-            </ul>
-        </nav>
+            </ul> <!-- end .main-nav__user-items -->
+        </nav> <!-- end .main-nav__wrapper -->
     </nav>
 
 </header> <!-- end .page-header -->
@@ -51,7 +51,7 @@
             <b class="stats__slogan">Стрижка у нас<br>это выгодно!</b>
             <p class="stats__intro">Мужская стрижка требует точного подхода. Обратимся к статистике:</p>
             <small class="stats__legend stats__legend--top"><sup>*</sup> - приведённые данные ложь</small>
-        </header>
+        </header> <!-- end .stats__header -->
 
         <table class="stats__items clearfix">
             <tr>
@@ -71,10 +71,10 @@
                 <td class="stats__value">500&nbsp;000<sup>*</sup></td>
                 <td class="stats__field">лайков</br> и комплиментов</td>
             </tr>
-        </table>
+        </table> <!-- end .stats__items -->
 
         <small class="stats__legend stats__legend--bottom"><sup>*</sup> - приведённые данные ложь</small>
-    </section>
+    </section> <!-- end .stats -->
 
     <section class="advantages">
         <div class="content-wrapper">
@@ -111,7 +111,7 @@
 
             </div>
         </div>
-    </section>
+    </section> <!-- end .advantages -->
 
     <section class="news">
         <div class="content-wrapper">
