--- a/index.html
+++ b/index.html
@@ -90,27 +90,27 @@
                                 <h3 class="advantages__item-title">Быстро</h3>
                                 <p>Мы делаем свою работу быстро! Два часа пролетят незаметно и Вы - счастливый обладатель стильной стрижки-минутки</p>
                             </div>
-                        </div>
+                        </div> <!-- end .advantages__item -->
                         <div class="advantages__item advantages__item--cool">
                             <span class="advantages__item-illustration advantages__item-illustration--2"></span>
                             <div class="advantages__item-descr">
                                 <h3 class="advantages__item-title">Круто</h3>
                                 <p>Забудьте, как вы стриглись раньше. Мы сделаем из вас звезду футбола или кино. Во всяком случае внешне.</p>
                             </div>
-                        </div>
+                        </div> <!-- end .advantages__item -->
                         <div class="advantages__item advantages__item--pricy">
                             <span class="advantages__item-illustration advantages__item-illustration--3"></span>
                             <div class="advantages__item-descr">
                                 <h3 class="advantages__item-title">Дорого</h3>
                                 <p>Наши мастера - професионалы своего дела и не могут стоить дешёво. К тому же, разве цена не даёт определённый статус?</p>
                             </div>
-                        </div>
-                    </div>
+                        </div> <!-- end .advantages__item -->
+                    </div> <!-- end .advantages__items -->
 
-                </div>
+                </div> <!-- end .slider-wrap -->
 
-            </div>
-        </div>
+            </div> <!-- end .advantages__wrapper -->
+        </div> <!-- end .content-wrapper -->
     </section> <!-- end .advantages -->
 
     <section class="news">
