add some comments

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
 
                 <a class="btn btn--news" href="">Показать все</a>
             </div>
-        </div>
-    </section>
+        </div> <!-- end .content-wrapper -->
+    </section> <!-- end .news -->
 
     <section class="reviews">
         <div class="content-wrapper">
